update-auth
